<resources>
    <string name="app_name">Sabelotodo</string>
    <string name="content_description">image</string>

    <!-- ADS -->
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
<!--        <string name="banner">ca-app-pub-4515698012373396/2351444900</string>-->
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
<!--        <string name="interstitial">ca-app-pub-4515698012373396/9980090620</string>-->
    <string name="nativo">ca-app-pub-3940256099942544/2247696110</string>
<!--        <string name="nativo">ca-app-pub-4515698012373396/6212143065</string>-->

    <!-- IDs -->
    <string name="id_cartoon_creations">cartoon-creations</string>
    <string name="id_films_series">films-series</string>
    <string name="id_global_age">global-age</string>
    <string name="id_music">music</string>
    <string name="id_spanish_age">spanish-age</string>
    <string name="id_videogames">videogames</string>
    <string name="id_important_dates">important-dates</string>

    <!-- ERROR -->
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- NO MORE QUESTIONS -->
    <string name="no_more_title">Has acabado con todo</string>
    <string name="no_more_description">No hay más preguntas por el momento</string>
    <string name="no_more_btn">Salir</string>

    <!-- EXIT -->
    <string name="exit_title">¿Seguro que quieres salir?</string>
    <string name="exit_description">Tus records se guardarán</string>
    <string name="exit_yes">SALIR</string>
    <string name="exit_no">QUEDARME</string>

    <!-- LOADING -->
    <string name="loading">Un momentito</string>
    <string name="loading_two">Estamos en ello…</string>

    <!-- CATEGORY -->
    <string name="category_title_description">El que sabe, sabe, y el que no…</string>
    <string name="category_record">Récord:</string>
    <string name="music_master_url">https://play.google.com/store/apps/details?id=com.mmfsin.musicmaster</string>

    <!-- CATEGORY DIALOG -->
    <string name="category_dialog_guess_age">Adivina la edad</string>
    <string name="category_dialog_guess_age_description">¿Conoces las edades de los famosos?</string>
    <string name="category_dialog_guess_date">Adivina la fecha</string>
    <string name="category_dialog_guesser_start">Empezar</string>

    <string name="category_dialog_temporary_age">¿Quién es más joven?</string>
    <string name="category_dialog_temporary_date">¿Qué salió antes?</string>
    <string name="category_dialog_temporary_important_dates">¿Qué ocurrió antes?</string>

    <!-- CATEGORY DIALOG MUSIC -->
    <string name="category_dialog_music_master">Music Master</string>
    <string name="category_dialog_download">Descargar</string>
    <string name="category_dialog_soon">¡Proximamente!</string>

    <!-- GUESSER -->
    <string name="guesser_in_the">En el año</string>
    <string name="guesser_years">Años</string>
    <string name="guesser_check">Comprobar</string>
    <string name="guesser_actual_record">récord</string>
    <string name="guesser_points">Puntos</string>
    <string name="guesser_no_more_questions">De momento no hay más preguntas</string>

    <!-- TEMPORARY -->
    <string name="temporary_ages">¿Quién es más joven?</string>
    <string name="temporary_dates">¿Cuál se estrenó antes?</string>
    <string name="temporary_dates_important_dates">¿Qué ocurrió antes?</string>
    <string name="temporary_same_year">Son del mismo año</string>

    <!-- TEMPORARY LOSER -->
    <string name="temporary_loser_title">¡Vaya!</string>
    <string name="temporary_loser_description">Parece que no es así</string>
    <string name="temporary_loser_rematch">Intentarlo de nuevo</string>
    <string name="temporary_loser_exit">Salir</string>

    <!-- SOLUTION AGE -->
    <string name="solution_age_was_born">Nació el</string>
    <string name="solution_age_of">de</string>
    <string name="solution_age_has">Tiene</string>
    <string name="solution_age_years">años</string>

    <string name="solution_was_in">EN EL</string>
    <string name="solution_correct_answer">+2 PUNTOS</string>
    <string name="solution_almost_good_answer">+1 PUNTO</string>
    <string name="solution_bad_answer">-1 PUNTO</string>

</resources>