<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_sad" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/MediumTextView_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/no_more_title"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/no_more_description"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/btn_accept"
        style="@style/MediumTextView_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/click_effect"
        android:backgroundTint="@color/green"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/no_more_btn"
        android:textAllCaps="true" />

</LinearLayout>