<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_pato_exit" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/MediumTextView_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/exit_title"
        android:textAllCaps="true" />

    <TextView
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/exit_description"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/btn_stay"
            style="@style/MediumTextView_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/click_effect"
            android:backgroundTint="@color/green"
            android:elevation="6dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/exit_no"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/gl_center"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_exit"
            style="@style/MediumTextView_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.47"
            android:background="@drawable/click_effect"
            android:backgroundTint="@color/red"
            android:elevation="6dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/no_more_btn"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/gl_center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>