<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:progressBackgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/cv_image"
            app:layout_constraintLeft_toLeftOf="@id/cv_image"
            app:layout_constraintRight_toRightOf="@id/cv_image"
            app:layout_constraintTop_toTopOf="@id/cv_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_sad" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/BigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporary_loser_title"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/BigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/temporary_loser_description"
        android:textAllCaps="true"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/btn_rematch"
        style="@style/MediumTextView_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/click_effect"
        android:backgroundTint="@color/green"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/temporary_loser_rematch"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/btn_exit"
        style="@style/MediumTextView_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/click_effect"
        android:backgroundTint="@color/red"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/temporary_loser_exit"
        android:textAllCaps="true" />

</LinearLayout>