<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_view_score">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl2_left"
        app:layout_constraintRight_toLeftOf="@id/btn_next"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/guesser_actual_record"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_record"
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="19" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/BigTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@string/guesser_points"
                android:textAllCaps="true"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_points"
                style="@style/BigTextView_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="15" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/gl2_right"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>