<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/light_grey"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        android:paddingVertical="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_duck"
            android:layout_width="46dp"
            android:layout_height="58dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_pato" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/app_name"
            android:textAllCaps="true">

            <TextView
                android:id="@+id/tv_app_name"
                style="@style/BigTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/x_typewriter"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="38sp" />

            <TextView
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/crazy_regular"
                android:maxLines="1"
                android:text="@string/category_title_description"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl2_left"
        app:layout_constraintRight_toRightOf="@id/gl2_right"
        app:layout_constraintTop_toBottomOf="@id/ll_top"
        tools:itemCount="7"
        tools:listitem="@layout/item_category" />

    <include
        android:id="@+id/loading"
        layout="@layout/include_loading"
        android:elevation="10dp"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>