<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_category_bottom"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/blue" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/drag"
            android:layout_width="42dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_frame_drag" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            style="@style/BigTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crazy_regular"
            android:textAllCaps="true"
            tools:text="@string/id_videogames" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Adivina la edad de los famosos..." />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginVertical="16dp"
        android:alpha="0.6"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator">

        <LinearLayout
            android:id="@+id/btn_guesser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/click_effect"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_question" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_guesser"
                    style="@style/BigTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/crazy_regular"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    tools:text="@string/category_dialog_guess_date" />

                <LinearLayout
                    android:id="@+id/ll_guesser_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/category_record"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_guesser_record"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="10" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_temporary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:background="@drawable/click_effect"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_rectangle" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-8dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_rectangle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_temporary"
                    style="@style/BigTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/crazy_regular"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    tools:text="@string/category_dialog_temporary_age" />

                <LinearLayout
                    android:id="@+id/ll_temporary_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/category_record"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_temporary_record"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="95" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>